--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <div class="preco-prato">
                         <h4>R$300.00</h4>
                         <button class="btn-default">
-                            <i class="fa-solid fa-basket-shopping"></i>
+                            <i class="fa-solid fa-basket-shopping" id="lixeira"></i>
                         </button>
                     </div>
                 </div>
