--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <div class="coracao-prato">
                         <i class="fa-solid fa-heart"></i>
                     </div>
-                    <img src="dish2.png" alt="CarneComFritas" class="imagem-prato">
+                    <img src="dish2.png" alt="CarneComFritas" class="imagem-prato" id="lixeira">
                     <h3 class="titulo-prato">Carne com Fritas</h3>
                     <span class="descricao-prato">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui quis esse alias animi sed quisquam
@@ -135,7 +135,7 @@
                     <div class="preco-prato">
                         <h4>R$300.00</h4>
                         <button class="btn-default">
-                            <i class="fa-solid fa-basket-shopping"></i>
+                            <i class="fa-solid fa-basket-shopping" id="lixeira"></i>
                         </button>
                     </div>
                 </div>
@@ -160,7 +160,7 @@
                         <div class="preco-prato">
                             <h4 id="x">R$150.00</h4>
                             <button class="btn-default">
-                                <i class="fa-solid fa-basket-shopping"></i>
+                                <i class="fa-solid fa-basket-shopping" id="lixeira"></i>
                             </button>
                         </div>
                 </div>
@@ -186,7 +186,7 @@
                     <div class="preco-prato">
                         <h4>R$189.00</h4>
                         <button class="btn-default">
-                            <i class="fa-solid fa-basket-shopping"></i>
+                            <i class="fa-solid fa-basket-shopping" id="lixeira"></i>
                         </button>
                     </div>
                 </div>
